--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
         "@tailwindcss/vite": "^4.0.0",
         "@vitejs/plugin-react": "^4.2.0",
         "autoprefixer": "^10.4.12",
-        "axios": "^1.7.4",
+        "axios": "^1.8.3",
         "concurrently": "^9.0.1",
         "laravel-vite-plugin": "^1.2.0",
         "postcss": "^8.4.31",
@@ -20,5 +20,11 @@
         "react-dom": "^18.2.0",
         "tailwindcss": "^3.2.1",
         "vite": "^6.0.11"
+    },
+    "dependencies": {
+        "@inertiajs/inertia": "^0.11.1",
+        "bootstrap": "^5.3.3",
+        "react-bootstrap": "^2.10.9",
+        "react-router-dom": "^7.3.0"
     }
 }
